# briidge_lossy

./: .gitignore  MANIFEST.in  ObstacleBridge.py  README.md  README_TESTING.md  cert.pem  extract_udp_debug.py  issue.txt  issue1.txt  key.pem  log_Client.txt  overlay_tty.py  prompt.txt  pyproject.toml  run_test.sh  run_test_log.sh  run_test_setup.sh  run_udp_bidir_tests.py  rus.txt  setup.py  test_overlay_e2e.py  test_overlay_e2e_reconnect.py  test_ws_payload_mode.py  testbed.md  testbed.txt  udp_bidirectional_main.py  udp_bidirectional_transfer.lua  udp_bidirectional_transfer.py  udp_bidirectional_transfer_v2.lua
ios/: README.md  README_MacOS.md  pyproject.toml
ios/examples/: macos_runtime.json
ios/native/IPServer/: IPServer-Bridging-Header.h  IPServer.entitlements  Info.plist  ObstacleBridgePacketFlowBridge.swift  ObstacleBridgePythonBridge.h  ObstacleBridgePythonBridge.m  PacketTunnelProvider.swift
ios/native/ObstacleBridgeApp/: ObstacleBridge.entitlements  ObstacleBridgeHostRunner.swift  ObstacleBridgeHostRunnerMain.swift  ObstacleBridgeMacAppMain.swift  ObstacleBridgeTunnelControl.swift
ios/native/ObstacleBridgeE2E/: ObstacleBridgeE2E.entitlements
ios/native/ObstacleBridgeMacRunner/: ObstacleBridgeMacHostRunner.swift
ios/native/ObstacleBridgeShared/: ObstacleBridgeAdminAPI.swift  ObstacleBridgeAdminAuth.swift  ObstacleBridgeAdminConfigChallenge.swift  ObstacleBridgeAdminConfigSupport.swift  ObstacleBridgeAdminSnapshotSupport.swift  ObstacleBridgeAdminWebSupport.swift  ObstacleBridgeChannelMuxCodec.swift  ObstacleBridgeChannelMuxTCPTransportOwner.swift  ObstacleBridgeChannelMuxTcpRuntime.swift  ObstacleBridgeChannelMuxTunRuntime.swift  ObstacleBridgeChannelMuxUdpRuntime.swift  ObstacleBridgeCompressLayerRuntime.swift  ObstacleBridgeConfigSecretCodec.swift  ObstacleBridgeMacOSTunAdapter.swift  ObstacleBridgeNativeCrypto.swift  ObstacleBridgeNativeProxyConnections.swift  ObstacleBridgeNativeServiceSpec.swift  ObstacleBridgeOnboarding.swift  ObstacleBridgeOverlayChannelCore.swift  ObstacleBridgeOverlayConnectionSupport.swift  ObstacleBridgeOverlayLayerTransportAdapter.swift  ObstacleBridgeOverlayStackPlanner.swift  ObstacleBridgePacketTunnelConfiguration.swift  ObstacleBridgePeerAddressResolver.swift  ObstacleBridgeProxyServer.swift  ObstacleBridgeQuicOverlayRuntime.swift  ObstacleBridgeQuicOverlayTransportOwner.swift  ObstacleBridgeRuntimeConfig.swift  ObstacleBridgeSecureLinkPskCodec.swift  ObstacleBridgeSecureLinkPskRuntime.swift  ObstacleBridgeSecureLinkPskTransportAdapter.swift  ObstacleBridgeTcpOverlayRuntime.swift  ObstacleBridgeTcpOverlayTransportOwner.swift  ObstacleBridgeUdpOverlayCodec.swift  ObstacleBridgeUdpOverlayPeerRuntime.swift  ObstacleBridgeUdpOverlaySessionCodec.swift  ObstacleBridgeUdpOverlayTransportOwner.swift  ObstacleBridgeWebAdminServer.swift  ObstacleBridgeWebSocketOverlayRuntime.swift  ObstacleBridgeWebSocketOverlayTransportOwner.swift  (+1 more)
ios/native/ObstacleBridgeTunnel/: Info.plist  LocalWebAdminServer.swift  ObstacleBridgeExtensionRuntime.swift  ObstacleBridgePythonRuntime.h  ObstacleBridgePythonRuntime.m  ObstacleBridgeTunnel-Bridging-Header.h  ObstacleBridgeTunnel-Info.plist  PacketFlowBridge.swift  PacketTunnelProvider.swift  TunnelStatus.swift
ios/scripts/: build_ios_app.sh  build_macos_app.sh  copy_peer_listener_logs.sh  copylogs.sh  create_ios_xcode_project.sh  download_ios_app.sh  download_ios_config.sh  patch_briefcase_xcode_project.py  patch_ios_native_crypto_xcode_project.py  patch_ios_xcode_project.py  run_ios_pytest.sh  run_macos_app.sh  sync_peer_listener_server.sh  upload_ios_config.sh
ios/src/obstacle_bridge_ios/: __init__.py  __main__.py  app.py  dependency_spike.py  diagnostics.py  (+10 more)
ios/tests/: swift_test_support.py  test_briefcase_xcode_patch.py  test_dependency_spike.py  test_diagnostics.py  test_invite_import.py  test_ios_app_facade.py  test_ios_e2e_app_runner.py  test_ios_overlay_layer_transport_adapter.py  test_ios_packet_tunnel_provider_probe.py  test_ios_profile_config.py  test_ios_secure_link_runtime.py  test_ios_secure_link_transport_adapter.py  test_ios_shared_tcp_transport_owner.py  test_ios_swift_udp_tun_helper.py  test_ios_xcode_patch.py  test_ipserver_extension.py  test_m25_ui.py  test_m3_native_sources.py  test_m3_tunnel.py  test_macos_swift_host_runner.py  test_native_crypto.py  test_proxy_server_swift_parity.py
ios/tools/: add_packet_tunnel_extension.py
(+191 files in other folders)
