[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ObstacleBridge"
version = "0.1.0"
description = "Lossy overlay bridge utilities and test tooling"
requires-python = ">=3.9"
dependencies = [
    "aioquic",
    "websockets",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
ObstacleBridge = "obstacle_bridge.bridge:main"


[tool.pytest.ini_options]
markers = [
    "integration: end-to-end integration tests",
    "slow: long-running tests",
]
